@@ -1,3 +1,10 @@
+Sat Feb 26 15:35:42 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* utils/catior/Makefile.am:
+	* utils/nslist/Makefile.am:
+
+	  Regenerated.
+
 Sat Feb 26 15:17:19 2005  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* orbsvcs/tests/Makefile.am:
